REL-122814 Original Images

--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -247,6 +247,8 @@
     <Compile Include="Managers\ResourcePoolManagerTests.cs" />
     <Compile Include="Managers\WorkspaceManagerTests.cs" />
     <Compile Include="Services\DataTransferLocationServiceTests.cs" />
+    <Compile Include="Services\Export\ExportTransferDataReaderTestsBase.cs" />
+    <Compile Include="Services\Export\ImageTransferDataReaderTests.cs" />
     <Compile Include="Services\IntegrationPointProfileServiceTests.cs" />
     <Compile Include="SetupAndTeardown.cs" />
     <Compile Include="JobHelper.cs" />
