REL-121045 Append/Overlay, Move Existing Documents, Image UI toggle

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Controllers\API\IntegrationPointProfilesAPIController.cs" />
     <Compile Include="Controllers\API\IntegrationPointTypesController.cs" />
     <Compile Include="Controllers\API\ResourcePoolController.cs" />
+    <Compile Include="Controllers\API\ToggleAPIController.cs" />
     <Compile Include="Controllers\SummaryPageController.cs" />
     <Compile Include="Controllers\ImportProviderController.cs" />
     <Compile Include="Controllers\API\SavedSearchesTreeController.cs" />
