fix build after merge

--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Readers\DataColumnWithValue.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Readers\DefaultTransferContext.cs" />
     <Compile Include="Readers\IDataTransferContext.cs" />
     <Compile Include="Readers\ImportDataReader.cs" />
     <Compile Include="Readers\RelativityReaderBase.cs" />
