--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Managers\ResourcePoolManagerTests.cs" />
     <Compile Include="Managers\WorkspaceManagerTests.cs" />
     <Compile Include="Services\DataTransferLocationServiceTests.cs" />
+    <Compile Include="Services\Export\DynamicFolderPathReaderTests.cs" />
     <Compile Include="Services\Export\ExportTransferDataReaderTestsBase.cs" />
     <Compile Include="Services\Export\ImageTransferDataReaderTests.cs" />
     <Compile Include="Services\IntegrationPointProfileServiceTests.cs" />
