Enable LongPath support in RIP

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
@@ -84,6 +84,10 @@
       <HintPath>..\packages\$(kCura_Data)\lib\net45\kCura.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="kCura.Utility, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(kCura_Utility)\lib\net45\kCura.Utility.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="kCura.Utility.MassAssign, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\$(kCuraCore)\lib\net45\kCura.Utility.MassAssign.dll</HintPath>
       <Private>True</Private>
