--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -175,6 +175,8 @@
     <Compile Include="QueryBuilders\ISourceProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="Repositories\IKeywordSearchRepository.cs" />
     <Compile Include="Repositories\Implementations\KeplerKeywordSearchRepository.cs" />
+    <Compile Include="Repositories\Implementations\FieldRepository.cs" />
+    <Compile Include="Repositories\IFieldRepository.cs" />
     <Compile Include="Statistics\Implementations\DocumentTotalStatistics.cs" />
     <Compile Include="Statistics\IDocumentTotalStatistics.cs" />
     <Compile Include="Statistics\IImageTotalStatistics.cs" />
@@ -225,20 +227,19 @@
     <Compile Include="Repositories\Implementations\RsapiTabRepository.cs" />
     <Compile Include="FileInfo.cs" />
     <Compile Include="Repositories\IDocumentRepository.cs" />
-    <Compile Include="Repositories\IFieldRepository.cs" />
+    <Compile Include="Repositories\IFieldQueryRepository.cs" />
     <Compile Include="Repositories\IJobHistoryRepository.cs" />
     <Compile Include="Repositories\Implementations\JobHistoryRepository.cs" />
     <Compile Include="Repositories\Implementations\KeplerDocumentRepository.cs" />
-    <Compile Include="Repositories\Implementations\FieldRepository.cs" />
+    <Compile Include="Repositories\Implementations\FieldQueryRepository.cs" />
     <Compile Include="Adaptors\Implementations\ObjectQueryManagerAdaptor.cs" />
     <Compile Include="Repositories\Implementations\SavedSearchRepository.cs" />
     <Compile Include="Adaptors\IObjectQueryManagerAdaptor.cs" />
-    <Compile Include="Repositories\Implementations\RsapiSourceWorkspaceRepository.cs" />
+    <Compile Include="Repositories\Implementations\SourceWorkspaceRepository.cs" />
     <Compile Include="Repositories\Implementations\KeplerWorkspaceRepository.cs" />
     <Compile Include="Repositories\IDestinationWorkspaceRepository.cs" />
     <Compile Include="Repositories\Implementations\DestinationWorkspaceRepository.cs" />
     <Compile Include="Repositories\Implementations\ScratchTableRepository.cs" />
-    <Compile Include="Repositories\Implementations\SourceWorkspaceJobHistoryRepository.cs" />
     <Compile Include="Repositories\Implementations\SourceJobRepository.cs" />
     <Compile Include="Repositories\IPermissionRepository.cs" />
     <Compile Include="Repositories\IRelativityAuditRepository.cs" />
@@ -247,7 +248,6 @@
     <Compile Include="Repositories\IScratchTableRepository.cs" />
     <Compile Include="Repositories\IServiceUrlRepository.cs" />
     <Compile Include="Repositories\ISourceProviderRepository.cs" />
-    <Compile Include="Repositories\ISourceWorkspaceJobHistoryRepository.cs" />
     <Compile Include="Repositories\ISourceJobRepository.cs" />
     <Compile Include="Repositories\ITabRepository.cs" />
     <Compile Include="Repositories\Implementations\KeplerArtifactGuidRepository.cs" />
