--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Contexts\OnBehalfOfUserClaimsPrincipalFactory.cs" />
     <Compile Include="Extensions\ClaimsPrincipalExtension.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\FieldExtensions.cs" />
     <Compile Include="Extensions\ObjectQueryResultSetExtensions.cs" />
     <Compile Include="Extensions\ResultSetExtensions.cs" />
     <Compile Include="Extensions\TaskExtension.cs" />
