--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -8,6 +8,7 @@
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="http"/>
 		<add key="targetHost" value="localhost" />
+    <!-- <add key="targetHost" value="https://il1ddmlpl3wb001.kcura.corp/Relativity/" />-->
 		<add key="databasePassword" value="edds" />
 				
 		<!-- Service Bus specific app setings for messaging connections -->
