Integration between UI and WinEDDS

--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -524,6 +524,7 @@
     <Compile Include="Models\BaseDTO.cs" />
     <Compile Include="Models\ButtonStateDTO.cs" />
     <Compile Include="Models\DestinationProviderDTO.cs" />
+    <Compile Include="Models\FileNamePartModel.cs" />
     <Compile Include="Models\ImportProviderSettings.cs" />
     <Compile Include="Models\ImportSettingsBase.cs" />
     <Compile Include="Models\ImportPreviewSettings.cs" />
