--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/packages.config
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/packages.config
@@ -18,6 +18,7 @@
   <package id="Relativity.Authentication.Interfaces" version="9.5.126.9" targetFramework="net451" />
   <package id="Relativity.Core" version="9.5.126.9" targetFramework="net451" />
   <package id="Relativity.ImportExport" version="9.5.126.9" targetFramework="net451" />
+  <package id="Relativity.Kepler" version="1.0.1.323" targetFramework="net451" />
   <package id="Relativity.Logging.Interfaces" version="9.4.300" targetFramework="net451" />
   <package id="ZetaLongPaths" version="1.0.0.16" targetFramework="net451" />
 </packages>
