--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -312,6 +312,11 @@
             <Platform>x64</Platform>
           </Platforms>
         </Project>
+        <Project path="Source\kCura.IntegrationPoints.UITests\kCura.IntegrationPoints.UITests.csproj">
+          <Platforms>
+            <Platform>x64</Platform>
+          </Platforms>
+        </Project>
       </Build>
       <Ignore>
         <Project path="Source\kCura.IntegrationPoints.Documentation\kCura.IntegrationPoints.Documentation.shfbproj" />
