REL-133470 Add Unit Tests to IntegrationPointTypesController

--- a/Source/kCura.IntegrationPoints.Web.Tests/packages.config
+++ b/Source/kCura.IntegrationPoints.Web.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="BCrypt-Official" version="0.1.109" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net451" />
+  <package id="FluentAssertions" version="4.19.2" targetFramework="net451" />
   <package id="kCura.Apps.Common.Utils" version="1.0.192.5" targetFramework="net451" />
   <package id="kCura.Config" version="9.5.103.62" targetFramework="net451" />
   <package id="kCura.Crypto" version="9.5.103.62" targetFramework="net451" />
