Chnages related to modal view

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -1109,6 +1109,7 @@
     <Content Include="Views\Tooltip\TooltipView.cshtml" />
     <Content Include="Views\Modals\AuthenticationModalView.cshtml" />
     <Content Include="Views\Modals\ExportRenamedFieldsView.cshtml" />
+    <Content Include="Views\Modals\ExportFileNamingOptionView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
