REL-133462 Add Unit Tests to kCura.IntegrationPoints.Security.DefaultEncryptionManager

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -317,6 +317,11 @@
             <Platform>x64</Platform>
           </Platforms>
         </Project>
+        <Project path="Source\kCura.IntegrationPoints.Security.Tests\kCura.IntegrationPoints.Security.Tests.csproj">
+          <Platforms>
+            <Platform>x64</Platform>
+          </Platforms>
+        </Project>
       </Build>
       <Ignore>
         <Project path="Source\kCura.IntegrationPoints.Documentation\kCura.IntegrationPoints.Documentation.shfbproj" />
