REL-133464_Add_Unit_Tests_to_kCura.IntegrationPoints.LDAPProvider.LDAPDataReader

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -322,6 +322,11 @@
             <Platform>x64</Platform>
           </Platforms>
         </Project>
+        <Project path="Source\kCura.IntegrationPoints.LDAPProvider.Tests\kCura.IntegrationPoints.LDAPProvider.Tests.csproj">
+          <Platforms>
+            <Platform>x64</Platform>
+          </Platforms>
+        </Project>
       </Build>
       <Ignore>
         <Project path="Source\kCura.IntegrationPoints.Documentation\kCura.IntegrationPoints.Documentation.shfbproj" />
