REL-133500 Add Unit Tests to Utils

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -327,6 +327,11 @@
             <Platform>x64</Platform>
           </Platforms>
         </Project>
+		<Project path="Source\kCura.IntegrationPoints.Domain.Tests\kCura.IntegrationPoints.Domain.Tests.csproj">
+          <Platforms>
+            <Platform>x64</Platform>
+          </Platforms>
+        </Project>
       </Build>
       <Ignore>
         <Project path="Source\kCura.IntegrationPoints.Documentation\kCura.IntegrationPoints.Documentation.shfbproj" />
