--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,8 +7,8 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="p-dv-vm-akor-3.kcura.corp" />
-    <!-- <add key="targetHost" value="https://il1ddmlpl3wb001.kcura.corp/Relativity/" />-->
+		<add key="targetHost" value="localhost" />
+    <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
 				
 		<!-- Service Bus specific app setings for messaging connections -->
@@ -16,7 +16,7 @@
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
 		<add key="connectionStringEDDS" value="data source={0}\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
-		<add key="connectionStringWorkspace" value="data source={1}; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
+		<add key="connectionStringWorkspace" value="data source={1}\EDDSINSTANCE001; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
 		<add key="relativityUserFirstName" value="Relativity" />
 		<add key="relativityUserLastName" value="Admin" />
 		<add key="keplerTimeout" value="600" />
