--- a/Source/kCura.IntegrationPoints.Agent/packages.config
+++ b/Source/kCura.IntegrationPoints.Agent/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Polly" version="5.1.0" targetFramework="net462" />
   <package id="Relativity" version="9.5.182.17" targetFramework="net462" />
   <package id="Relativity.API" version="9.5.182.17" targetFramework="net462" />
   <package id="Relativity.Authentication" version="9.5.182.17" targetFramework="net462" />
