--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/packages.config
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/packages.config
@@ -26,6 +26,7 @@
   <package id="NEST" version="1.4.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Polly" version="5.1.0" targetFramework="net462" />
   <package id="Relativity.DataGrid" version="10.7.34" targetFramework="net462" />
   <package id="Relativity.ImportExport" version="9.5.182.17" targetFramework="net462" />
   <package id="Relativity.Kepler" version="1.0.1.333" targetFramework="net462" />
