--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -10,6 +10,13 @@
 		<add key="targetHost" value="localhost" />
     <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
+		
+		<!-- ========== UI tests ========== -->
+		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
+		<add key="ui.implicitWaitInSec" value="30" />
+		<!-- Time after tests assume there won't be more ajax calls after page loading -->
+		<add key="ui.waitForAjaxCallsInSec" value="3" />
+		<!-- === End of UI tests ========== -->
 				
 		<!-- Service Bus specific app setings for messaging connections -->
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
