--- a/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
+++ b/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
@@ -63,10 +63,16 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Components\SavedSearchDialog.cs" />
+    <Compile Include="Pages\IntegrationPointsPage.cs" />
+    <Compile Include="Pages\ExportToFileSecondPage.cs" />
+    <Compile Include="Pages\ExportFirstPage.cs" />
+    <Compile Include="Pages\Page.cs" />
     <Compile Include="Pages\GeneralPage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
-    <Compile Include="Tests\BaseUITest.cs" />
+    <Compile Include="Tests\UiTest.cs" />
     <Compile Include="Common\PageException.cs" />
+    <Compile Include="Tests\SelectWithSavedSearchShould.cs" />
     <Compile Include="Tests\UserOnLoginPageShould.cs" />
   </ItemGroup>
   <ItemGroup>
