--- a/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
@@ -9,7 +9,14 @@
 		<add key="ProtocolVersion" value="http"/>
 		<add key="targetHost" value="localhost" />
 		<add key="databasePassword" value="P@ssw0rd@1" />
-		
+
+	  <!-- ========== UI tests ========== -->
+	  <!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
+	  <add key="ui.implicitWaitInSec" value="30" />
+	  <!-- Time after tests assume there won't be more ajax calls after page loading -->
+	  <add key="ui.waitForAjaxCallsInSec" value="3" />
+	  <!-- === End of UI tests ========== -->
+    
 		<!-- Service Bus specific app setings for messaging connections -->
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
