Generate application.xml in tt-img-app Modify build.xml to include new kCura.IntegrationPoints.Management.dll

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -502,6 +502,7 @@
           <Assembly>lib\kCura.DocumentTransferProvider.dll</Assembly>
           <Assembly>lib\kCura.IntegrationPoints.Services.dll</Assembly>
           <Assembly>lib\kCura.IntegrationPoints.Services.Interfaces.Private.dll</Assembly>
+          <Assembly>lib\kCura.IntegrationPoints.Management.dll</Assembly>
           <Assembly>lib\Castle.Windsor.dll</Assembly>
           <Assembly>lib\Newtonsoft.Json.dll</Assembly>
           <Assembly>lib\kCura.IntegrationPoints.Security.dll</Assembly>
