REL-134356 Deleted registration of IIntegrationPointProviderValidator and reverted app.config

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,7 +7,7 @@
 		
 		<!-- dev-box machine specific settings-->
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="p-dv-vm-pnow-2.kcura.corp" />
+		<add key="targetHost" value="localhost" />
     <!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
 		<add key="databasePassword" value="MySqlPassword123" />
 		
@@ -44,7 +44,7 @@
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
 		<add key="InputFolder" value="c:\RIP_ImportTest" />
 		<add key="UseLocalRAP" value="true" />
-		<add key="LocalRAPFileLocation" value="D:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap" />
+		<add key="LocalRAPFileLocation" value="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
