--- a/Source/kCura.IntegrationPoints.Services.Tests.Integration/packages.config
+++ b/Source/kCura.IntegrationPoints.Services.Tests.Integration/packages.config
@@ -43,6 +43,7 @@
   <package id="Relativity.Services.DataContracts" version="9.5.218.64" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces" version="9.5.218.64" targetFramework="net462" />
   <package id="Relativity.Services.Interfaces.Private" version="9.5.218.64" targetFramework="net462" />
+  <package id="Relativity.Telemetry.APM" version="9.4.143" targetFramework="net462" />
   <package id="Relativity.Telemetry.DataContracts.Shared" version="9.4.143" targetFramework="net462" />
   <package id="Relativity.Telemetry.MetricsCollection" version="9.4.143" targetFramework="net462" />
   <package id="Relativity.Toggles" version="1.0.0.84" targetFramework="net462" />
